--- a/index.html
+++ b/index.html
@@ -13,22 +13,37 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
     </head>
     <body>
         <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
-        <section>
-            <nav>
-                <ul>
-                    <li><a href="link">Przycisk 1</a></li>
-                    <li><a href="link">Przycisk 2</a></li>
-                    <li><a href="link">Przycisk 3</a></li>
-                    <li><a href="link">Przycisk 4</a></li>
-            </nav>
-        </section>
-        <!-- Add your site or application content here -->
-        <p>To ja, Michał M</p>
+
+        <nav>
+            <ul id="navbar" class="left-side">
+                </li>
+                <li class="right-side"><a href="#Otoja" class="nav-link">Oto Ja</a></li>
+                <li class="right-side"><a href="#Mojedoświadczenie" class="nav-link">Moje doświadczenie</a></li>
+                <li class="right-side"><a href="#Kontakt" class="nav-link">Kontakt</a></li>
+            </ul>
+        </nav>
+
+        <header class="hero">
+            <div class="hero-content">
+                <h1 class="animated fadeInLeft">Oto ja, Michał</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </header>
+
+        <main class="klasa">
+            <div class="klasa-content">
+            <h1 class="animated fadeInLeft">Moje doświadczenie</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </main>
+
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
@@ -43,7 +58,9 @@
         <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 
         <footer>
-            Kontakt <address>Michał Maniara (maniara.michal@gmail.com)</address>
+
+            <a href="mailto:[e-mail]">maniara.michal@gmail.com </a>
+
         </footer>
     </body>
 </html>
